<resources>
    <string name="app_name">DAMEP_FernandoVegasDanielNavarro</string>
    <string name="title_label">Censo DAM 2024</string>
    <string name="apellidos_nombres_label">Apellidos y Nombres</string>
    <string name="correo_label">Correo Electrónico</string>
    <string name="clave_label">Clave</string>
    <string name="telefono_label">Teléfono de Contacto</string>
    <string name="fecha_nacimiento_label" />
    <string name="fecha_nacimiento_label2">Fecha de Nacimiento</string>
    <string name="hora_nacimiento_label">Hora de Nacimiento</string>
    <string name="textViewpersonas">¿Cuántas personas viven en la vivienda?</string>
    <string name="checkboxUrbano">Urbano</string>
    <string name="radioButtonUrbano">Urbano</string>
    <string name="radioButtonRural">Rural</string>
    <string name="editTextPersona" />
    <string name="residencia_label">Zona de residencia</string>
    <string name="textViewIngresoPromedio">Ingreso promedio de la familia</string>
    <string name="textViewOpinion">¿Que opinas sobre los bonos otorgados sobr el gobierno?</string>
    <string name="textViewMascotasCasa">Mascotas que viven en casa</string>
    <string name="checkBoxGato">Gato</string>
    <string name="checkBoxPerro">Perro</string>
    <string name="checkBoxPollo">Pollo</string>
    <string name="checkBoxPato">Pato</string>
    <string name="checkBoxOtro">Otro</string>
    <string name="btnEnviarDatos">Enviar Datos</string>
</resources>